Fix overflow-x

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -260,6 +260,7 @@ html, body {
   footer#footer {
     background-color: #003453;
     color: #fff;
+    width: 100vw
 
     .contact-info {
       div {
@@ -560,6 +561,7 @@ html, body {
    footer#footer {
     background-color: #003453;
     color: #fff;
+    width: 100vw;
 
     .contact-info {
       div {
